cabal-version:      3.0
name:               io-classes-mtl
version:            0.1.2.0
synopsis:           Experimental MTL instances for io-classes
description:
    MTL instances for
    [io-classes](https://hackage.hasekll.org/package/io-classes) package.
    Some of the instances are novel and some are still experimental.
license:            Apache-2.0
license-files:      LICENSE NOTICE
author:             Duncan Coutts, Marcin Szamotulski
maintainer:         Marcin Szamotulski coot@coot.me
copyright:          2022-2024 Input Output Global Inc (IOG)
category:           Control
build-type:         Simple
extra-doc-files:    README.md CHANGELOG.md
bug-reports:        https://github.com/input-output-hk/io-sim/issues
tested-with:        GHC == { 8.10, 9.2, 9.4, 9.6, 9.8, 9.10 }

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wpartial-fields
                 -Widentities
                 -Wunused-packages
                 -Wno-redundant-constraints
                 -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:  Control.Monad.Class.Trans
                   ,  Control.Monad.Class.MonadEventlog.Trans
                   ,  Control.Monad.Class.MonadSay.Trans
                   ,  Control.Monad.Class.MonadST.Trans
                   ,  Control.Monad.Class.MonadSTM.Trans
                   ,  Control.Monad.Class.MonadThrow.Trans
                   ,  Control.Monad.Class.MonadTime.Trans
                   ,  Control.Monad.Class.MonadTime.SI.Trans
                   ,  Control.Monad.Class.MonadTimer.Trans
                   ,  Control.Monad.Class.MonadTimer.SI.Trans
    build-depends:    base >=4.9 && <4.21,
                      array,
                      mtl,

                      io-classes ^>=1.4.1.0 || ^>=1.5,
                      si-timers,


    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:  ImportQualifiedPost
