cabal-version:       3.4
name:                si-timers
version:             0.4.0.0
synopsis:            Timers using SI units (seconds) which are safe on 32-bit
                     platforms.
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2022 Input Output (Hong Kong) Ltd.
author:              Duncan Coutts, Marcin Szamotulski, Neil Davis
maintainer:          Marcin Szamotulski
category:            Control
build-type:          Simple
tested-with:         GHC == 8.10.7, GHC == 9.2.5, GHC == 9.4.3

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network
  subdir:   io-sim

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wno-unticked-promoted-constructors
                 -Wpartial-fields
                 -Wredundant-constraints
                 -Wunused-packages

library
  import:              warnings
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Class.MonadTime.SI
                       Control.Monad.Class.MonadTimer.SI
                       Control.Monad.Class.MonadTimer.NonStandard
  default-language:    Haskell2010
  other-extensions:    BangPatterns,
                       CPP,
                       DefaultSignatures,
                       DeriveGeneric,
                       NumericUnderscores,
                       ScopedTypeVariables,
                       TypeFamilies
  build-depends:       base              >=4.9 && <4.18,
                       mtl,
                       time              >=1.9.1 && <1.13,

                       io-classes        >=0.3 && <0.5
  if flag(asserts)
     ghc-options:      -fno-ignore-asserts

test-suite test
  import:              warnings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.MonadTimer
  default-language:    Haskell2010
  build-depends:       base,

                       QuickCheck,
                       tasty,
                       tasty-quickcheck,

                       si-timers
